<resources>
<string name="app_name">ApplicationMultijeux</string>
<string name="tictactoe">TicTacToe</string>
<string name="jeudelavie">Jeu de la vie</string>
<string name="suivi">Suivi</string>
<string name="quitter">Quitter</string>
<string name="lancer">Lancer</string>
<string name="tailleGrille">Taille de la grille :</string>
<string name="score">Score</string>
<string name="parametre">Parametre</string>
<string name="retour">Retour</string>
<string name="nbLigneJV">Nombre de lignes?</string>
<string name="nbColonneJV">Nombre de colonnes?</string>
</resources>