<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:id="@+id/tv1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="100px"
        android:text="@string/jeudelavie" />


    <EditText
        android:id="@+id/et1"
        android:layout_below="@id/tv1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:textColor="@color/black"
        android:hint="@string/nbLigneJV" />

    <EditText
        android:id="@+id/et2"
        android:layout_below="@id/et1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:textColor="@color/black"
        android:hint="@string/nbColonneJV" />

    <Button
        android:id="@+id/btnJouer"
        android:layout_below="@id/et2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/black"
        android:text="@string/lancer"
        android:onClick="onCreate" />

    <Button
        android:id="@+id/btnRetour"
        android:layout_below="@id/btnJouer"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:backgroundTint="@color/red"
        android:textColor="@color/black"
        android:hint="@string/retour"
        android:onClick="retourApplication" />

</RelativeLayout>